fixtures/runtime/invalid/functions/by-ref-capture.php
<?php
$x = 1;
$f = function () use (&$x) {
    return $x;
};

$f();
